@@ -5,6 +5,7 @@ X3 C++ PluginFramework
     * FileUtility: Add FOF_SILENT flag for SHFileOperationW.
     * LogManager: Avoid reenter in WriteLog.
     * LogWriter: Hide progress UI in CopyLogFilesToServer.
+    * LogHelper.h: Rename the variable 'buf' to '_buf'.
 
 2011-02-24
 
